INCLUDESPATH to INCLUDES_PATH THEMEPATH to THEME_PATH Start .htaccess enforcing areas, initially Deny from all, set any rewrites, then Allow from all in directories as needed More tweaking with initial global variable settings

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 # If repo resources are used directly in your local web environment, this .htaccess will help route requests for things such as cache busting urls.
 
+# Initially deny access to all resources, later overriding with allow in specific directories
+Deny from all
+
 # ###########################################################
 # URL REWRITES
 # ###########################################################
