--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,10 @@
 # If repo resources are used directly in your local web environment, this .htaccess will help route requests for things such as cache busting urls.
 
-# Initially deny access to all resources, later overriding with allow in specific directories
-Deny from all
+# Initially deny access to all resources, later overriding with allow in specific directories with subdirectory .htaccess files
+#Order deny,allow
+#Deny from all
+# Instead later do access control with mod_rewrite: https://httpd.apache.org/docs/2.2/howto/access.html, https://httpd.apache.org/docs/2.4/rewrite/flags.html
+
 
 # ###########################################################
 # URL REWRITES
@@ -12,28 +15,35 @@ Deny from all
 # ------------------------------------------------------------------------------
 
 <IfModule mod_rewrite.c>
-	
+
 	Options +FollowSymLinks
 	RewriteOptions MaxRedirects=15
-	
+
 	# Start rewriting
 	RewriteEngine On
-	
+
 	# Generate rewrite base dynamically
 	RewriteCond %{REQUEST_URI}::$1 ^(.*?/)(.*)::\2$
 	RewriteRule ^(.*)$ - [E=BASE:%1]
 	#%{ENV:BASE}
-	
+
 	# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-	
+
+	# Access control with mod_rewrite: https://httpd.apache.org/docs/2.2/howto/access.html, https://httpd.apache.org/docs/2.4/rewrite/flags.html
+	RewriteCond %{REQUEST_URI} !^/redlove/stylesheets/dist/ [NC]
+	RewriteCond %{REQUEST_URI} !^/redlove/javascript/dist/ [NC]
+	RewriteRule ^(.*)$ - [F]
+
+	# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 	# ------------------------------------------------------------------------------
 	# | Filename-based cache busting
 	# ------------------------------------------------------------------------------
-	
+
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^(.+)\.(\d+)\.(js|css|png|jpg|gif)$ %{ENV:BASE}$1.$3 [NC,L,R=301]
-	
+
 	# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-	
+
 </IfModule>
